--- a/package.json
+++ b/package.json
@@ -211,6 +211,7 @@
     "async-validator": "^3.3.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "component-classes": "^1.2.6",
+    "dayjs": "^1.9.3",
     "dom-align": "^1.10.4",
     "dom-closest": "^0.2.0",
     "dom-scroll-into-view": "^2.0.0",
@@ -220,7 +221,6 @@
     "ismobilejs": "^1.0.0",
     "json2mq": "^0.2.0",
     "lodash-es": "^4.17.15",
-    "moment": "^2.27.0",
     "node-emoji": "^1.10.0",
     "omit.js": "^2.0.0",
     "raf": "^3.4.0",
